Update 's3n2b5jza-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-65a4743f43.4c27.p3.openshiftapps.com/rhtap/rhtap-qe:9be1c7fac799c4040fd823c8a3f34c93e66f8943@sha256:9c04bca734e5aae7967b87d8f34469a3cba2f36f3aff5f9501594730e1416913

--- a/components/s3n2b5jza-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/s3n2b5jza-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: s3n2b5jza-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-65a4743f43.4c27.p3.openshiftapps.com/rhtap/rhtap-qe:9be1c7fac799c4040fd823c8a3f34c93e66f8943@sha256:9c04bca734e5aae7967b87d8f34469a3cba2f36f3aff5f9501594730e1416913
+          name: container-image
